--- a/README
+++ b/README
@@ -4,7 +4,7 @@ DJI D-Log, for use with OpenColorIO.
 
 
 
-Visit www.jimmyzhu.net/blog/dji-dlog-aces-idt for additional information.
+Visit https://www.jimmyzhu.co.uk/blog/arri-logc4-aces-idt-220629 for additional information.
 
 Copyright
 ---------
